--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-myscratchs.py
+/myscratchs.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
